# codie-agent-build

./: .gitignore  README.md
.github/workflows/: build-agent-images.yml
docker-registry/agent-dockerfiles/hermes-agent/: Dockerfile  codie-entrypoint.sh
docker-registry/agent-dockerfiles/hermes-agent/extensions/hermes-codie-emitter/: .dockerignore  pyproject.toml
docker-registry/agent-dockerfiles/hermes-agent/extensions/hermes-codie-emitter/hermes_codie_emitter/: __init__.py  _log.py  autostart.py  emitter.py  mcp_bridge.py  ring.py  shim.py
docker-registry/agent-dockerfiles/hermes-agent/extensions/hermes-codie-emitter/tests/: test_autostart.py  test_contract.py  test_emitter.py  test_mcp_bridge.py  test_ring.py  test_shim_emit.py  test_shim_patch.py
docker-registry/agent-dockerfiles/openhuman/shim/: pyproject.toml
docker-registry/agent-dockerfiles/openhuman/shim/shim/: __init__.py  __main__.py  event_stream.py  rpc_client.py  ws_server.py
docker-registry/agent-dockerfiles/openhuman/shim/tests/: conftest.py  test_event_stream.py  test_ws_server_framing.py  test_ws_server_streaming.py  test_ws_server_terminal_events.py
docker-registry/scripts/: _lib.sh  build-browser-mcp-docker.sh  build-codieclaw-docker.sh  build-hermes-docker.sh  build-home-mcp-docker.sh  build-media-mcp-docker.sh  build-memory-mcp-docker.sh  build-openclaw-docker.sh  build-openhuman-docker.sh  build-search-mcp-docker.sh  gen-registry-certs.sh  trust-registry-ca.ps1  trust-registry-ca.sh
docker-registry/shared/: install-agent-baseline.sh
(+24 files in other folders)
