[project]
name = "shim"
version = "0.1.0"
description = "WS RPC v3 ↔ OpenHuman JSON-RPC translation shim"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13",
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
